tests/fixtures/positive/compose/ComposeUnstableParameter.kt
package test
import androidx.compose.runtime.Composable

@Composable
fun UserList(users: List<User>) { }
