tests/fixtures/negative/compose/ComposeUnstableParameter.kt
package test
import androidx.compose.runtime.Composable
import kotlinx.collections.immutable.ImmutableList

@Composable
fun UserList(users: ImmutableList<User>) { }
